# face-detection-lib

./: .gitignore  .gitmodules  import-summary.txt  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/fda/app/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/fda/app/: MainActivity.kt  MainViewModel.kt
app/src/main/java/com/fda/app/camera/: CameraModule.kt  DetectionDrawHelper.kt  ImageAnalyzer.kt
app/src/main/java/com/fda/app/ext/: Image.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/layout-land/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/fda/app/: ExampleUnitTest.kt
facedetectionlib/: CMakeLists.txt  build.gradle
facedetectionlib/src/androidTest/java/com/fda/facedetectionlib/: ExampleInstrumentedTest.kt
facedetectionlib/src/main/: AndroidManifest.xml
facedetectionlib/src/main/cpp/: face_detection.cpp  face_detection_jni.cpp
facedetectionlib/src/main/cpp/detector/: open_cv_hog_detector.cpp  open_cv_hog_detector.hpp
facedetectionlib/src/main/cpp/util/: jni_bitmap2mat.cpp  jni_bitmap2mat.hpp
facedetectionlib/src/main/java/com/fda/facedetectionlib/jni/: DetectResult.kt  FaceDetection.kt  VisionDetRet.java
facedetectionlib/src/test/java/com/fda/facedetectionlib/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
